# StriNNg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
strinng/: generators.py  hypergraph.py  match.py  prototyping.ipynb  rewrite.py  rule.py
strinng/gui/: drawinfo.py  mpldraw.py
